ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/Exposure__c.object-meta.xml
<CustomObject>
    <label>Exposure</label>
    <nameField>
        <label>Exposure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exposures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>