ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/AD__c.field-meta.xml
<CustomField>
    <fullName>AD__c</fullName>
    <label>AD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>