ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Agreement_amount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_amount__c</fullName>
    <label>Agreement amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>