ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/ApprButPenForDis__c.field-meta.xml
<CustomField>
    <fullName>ApprButPenForDis__c</fullName>
    <label>Approved But Pending For Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>