ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Current_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Current_Exposure__c</fullName>
    <description>Finance_Amt__c (opportunity)   +   Total_Insurance_Payable__c(opportunity)</description>
    <label>Current Exposure</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>