ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Code</label>
    <referenceTo>Customer_Code__c</referenceTo>
    <relationshipName>Exposures</relationshipName>
    <type>Lookup</type>
</CustomField>