ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Date_of_Sanction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sanction__c</fullName>
    <label>Date of Sanction</label>
    <type>Date</type>
</CustomField>