ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Deal_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Deal_Ageing__c</fullName>
    <label>Deal Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>