ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>