ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/DealDate__c.field-meta.xml
<CustomField>
    <fullName>DealDate__c</fullName>
    <formula>DATEVALUE( Deal_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealDate</label>
    <type>Date</type>
</CustomField>