ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <label>DPD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>