ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type__c</fullName>
    <label>Exposure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>