ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/ExposureHeader__c.field-meta.xml
<CustomField>
    <fullName>ExposureHeader__c</fullName>
    <label>ExposureHeader</label>
    <length>225</length>
    <type>Text</type>
</CustomField>