ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Family_Exposure_Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>Family_Exposure_Customer_Relation__c</fullName>
    <label>Family Exposure Customer Relation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>