ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/IB_Seasoning__c.field-meta.xml
<CustomField>
    <fullName>IB_Seasoning__c</fullName>
    <label>IB Seasoning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>