ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Mor2__c.field-meta.xml
<CustomField>
    <fullName>Mor2__c</fullName>
    <label>Mor2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>