ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/PD__c.field-meta.xml
<CustomField>
    <fullName>PD__c</fullName>
    <label>PD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>