ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Peak_Delay__c.field-meta.xml
<CustomField>
    <fullName>Peak_Delay__c</fullName>
    <label>Peak Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>