ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Product_Variant_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant_Name__c</fullName>
    <label>Product Variant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>