ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/RCNo__c.field-meta.xml
<CustomField>
    <fullName>RCNo__c</fullName>
    <label>RCNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>