ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <label>Status Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>