ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower Exposure</fullName>
            </value>
            <value>
                <fullName>Bank Exposure</fullName>
            </value>
            <value>
                <fullName>Additional Customer</fullName>
            </value>
            <value>
                <fullName>Co-Borrower Exposure</fullName>
            </value>
            <value>
                <fullName>Family Exposure</fullName>
            </value>
            <value>
                <fullName>Existing Borrower Exposure</fullName>
            </value>
            <value>
                <fullName>Guarantor Exposure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>