ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Type_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Facility__c</fullName>
    <label>Type of Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>