ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <label>Used</label>
    <length>1</length>
    <type>Text</type>
</CustomField>