ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/fields/Waiver__c.field-meta.xml
<CustomField>
    <fullName>Waiver__c</fullName>
    <label>Waiver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>