ProdIND/ProdPrograms/force-app/main/default/objects/Exposure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>AD__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ExposureHeader__c</columns>
    <columns>Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>